# LongNum

./: CMakeLists.txt  main.cpp
include/: LongNum.h
includes/: LongNum.h
scr/: LongNum.cpp  PiCalc.cpp
test/: test.cpp
